# ControlCamera

./: CMakeLists.txt  ControlCamera.cpp  ControlCamera.h  README.md  config.yaml  config_manager.py  convert_model.py  download_model.sh  main.cpp  mainwindow.cpp  mainwindow.h  manual.html  requirements.txt  veinclasses.txt  yolo_detector.py
